--- a/net-analyzer/pinger/ChangeLog
+++ b/net-analyzer/pinger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/pinger
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.1 2005/06/03 18:13:05 angusyoung Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/pinger/ChangeLog,v 1.2 2005/07/19 15:33:19 dholm Exp $
+
+  19 Jul 2005; David Holm <dholm@gentoo.org> pinger-0.30.ebuild:
+  Added to ~ppc.
 
 *pinger-0.30 (03 Jun 2005)
 
