--- a/net-analyzer/quidscor/ChangeLog
+++ b/net-analyzer/quidscor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/quidscor
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/quidscor/ChangeLog,v 1.4 2005/04/17 20:28:28 vanquirius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/quidscor/ChangeLog,v 1.5 2005/07/19 15:35:31 dholm Exp $
+
+  19 Jul 2005; David Holm <dholm@gentoo.org> quidscor-1.2.48.ebuild:
+  Added to ~ppc.
 
   17 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> quidscor-1.2.48.ebuild:
   Fix broken sed line, add fix for lacking TRUE and FALSE definitions. Thanks to
