--- a/net-analyzer/zabbix-agent/ChangeLog
+++ b/net-analyzer/zabbix-agent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/zabbix-agent
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/zabbix-agent/Attic/ChangeLog,v 1.2 2005/04/26 21:53:30 iggy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/zabbix-agent/Attic/ChangeLog,v 1.3 2005/07/19 16:46:42 dholm Exp $
+
+  19 Jul 2005; David Holm <dholm@gentoo.org> zabbix-agent-1.1_alpha7.ebuild:
+  Added to ~ppc.
 
   26 Apr 2005; Brian Jackson <iggy@gentoo.org> metadata.xml:
   fixed metadata.xml
