--- a/net-libs/libtorrent/ChangeLog
+++ b/net-libs/libtorrent/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libtorrent
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.15 2005/07/16 23:30:22 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.16 2005/07/19 21:18:33 flameeyes Exp $
+
+*libtorrent-0.7.0 (19 Jul 2005)
+
+  19 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
+  +libtorrent-0.7.0.ebuild:
+  New upstream version.
 
 *libtorrent-0.6.7-r1 (16 Jul 2005)
 
