--- a/media-sound/alsa-headers/ChangeLog
+++ b/media-sound/alsa-headers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.38 2005/07/19 06:09:48 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.39 2005/07/19 21:48:46 kloeri Exp $
+
+  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
+  alsa-headers-1.0.9b.ebuild:
+  Stable on alpha.
 
   19 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
   alsa-headers-1.0.9b.ebuild:
