--- a/kde-misc/metabar/ChangeLog
+++ b/kde-misc/metabar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/metabar
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/metabar/Attic/ChangeLog,v 1.4 2005/07/19 14:21:11 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/metabar/Attic/ChangeLog,v 1.5 2005/07/20 11:07:27 dholm Exp $
+
+  20 Jul 2005; David Holm <dholm@gentoo.org> metabar-0.8.ebuild:
+  Added to ~ppc.
 
 *metabar-0.8 (19 Jul 2005)
 
