--- a/media-sound/alsa-headers/ChangeLog
+++ b/media-sound/alsa-headers/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.39 2005/07/19 21:48:46 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.40 2005/07/20 12:08:02 corsair Exp $
+
+  20 Jul 2005; Markus Rothe <corsair@gentoo.org> alsa-headers-1.0.9b.ebuild:
+  Stable on ppc64
 
   19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
   alsa-headers-1.0.9b.ebuild:
