--- a/sys-libs/ss/ChangeLog
+++ b/sys-libs/ss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ss/Attic/ChangeLog,v 1.13 2005/07/19 21:43:12 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/ss/Attic/ChangeLog,v 1.14 2005/07/20 12:26:00 corsair Exp $
+
+  20 Jul 2005; Markus Rothe <corsair@gentoo.org> ss-1.38.ebuild:
+  Stable on ppc64
 
   19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> ss-1.38.ebuild:
   Stable on alpha.
