--- a/games-simulation/lincity-ng/ChangeLog
+++ b/games-simulation/lincity-ng/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-simulation/lincity-ng
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-simulation/cvs-repo/gentoo-x86/games-simulation/lincity-ng/ChangeLog,v 1.1 2005/06/23 22:25:17 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-simulation/cvs-repo/gentoo-x86/games-simulation/lincity-ng/ChangeLog,v 1.2 2005/07/20 20:33:34 mr_bones_ Exp $
+
+*lincity-ng-1.0.1 (20 Jul 2005)
+
+  20 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org>
+  +lincity-ng-1.0.1.ebuild:
+  version bump (bug #99662)
 
 *lincity-ng-1.0 (23 Jun 2005)
 
