--- a/dev-php/PEAR-XML_RSS/ChangeLog
+++ b/dev-php/PEAR-XML_RSS/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-XML_RSS
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-XML_RSS/ChangeLog,v 1.11 2005/04/22 14:48:08 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-XML_RSS/ChangeLog,v 1.12 2005/07/21 06:12:11 sebastian Exp $
+
+  21 Jul 2005; Sebastian Bergmann <sebastian@gentoo.org>
+  PEAR-XML_RSS-0.9.2.ebuild:
+  Add missing keywords.
 
   22 Apr 2005; Simon Stelling <blubb@gentoo.org> PEAR-XML_RSS-0.9.2.ebuild:
   stable on amd64
