--- a/games-util/joystick/ChangeLog
+++ b/games-util/joystick/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-util/joystick
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/joystick/ChangeLog,v 1.1 2005/07/21 03:58:57 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/joystick/ChangeLog,v 1.2 2005/07/21 07:53:07 dholm Exp $
+
+  21 Jul 2005; David Holm <dholm@gentoo.org> joystick-20050720.ebuild:
+  Added to ~ppc.
 
 *joystick-20050720 (20 Jul 2005)
 
