--- a/app-crypt/xca/ChangeLog
+++ b/app-crypt/xca/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/xca
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/xca/ChangeLog,v 1.3 2005/05/07 21:25:03 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/xca/ChangeLog,v 1.4 2005/07/21 15:30:36 caleb Exp $
+
+  21 Jul 2005; Caleb Tennis <caleb@gentoo.org> xca-0.5.1.ebuild:
+  Fix Qt dep per 98180
 
   07 May 2005; David Holm <dholm@gentoo.org> xca-0.5.1.ebuild:
   Added to ~ppc.
