--- a/net-wireless/kdebluetooth/ChangeLog
+++ b/net-wireless/kdebluetooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/kdebluetooth
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kdebluetooth/Attic/ChangeLog,v 1.31 2005/07/21 15:17:24 puggy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kdebluetooth/Attic/ChangeLog,v 1.32 2005/07/21 15:52:11 puggy Exp $
+
+  21 Jul 2005; Douglas Russell <puggy@gentoo.org>
+  kdebluetooth-1.0_beta1.ebuild:
+  Slight modification to the 1.0 ebuild
 
 *kdebluetooth-1.0_beta1 (21 Jul 2005)
 
