--- a/media-libs/portaudio/ChangeLog
+++ b/media-libs/portaudio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/portaudio
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.22 2005/07/21 07:07:48 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/portaudio/ChangeLog,v 1.23 2005/07/22 00:16:39 eradicator Exp $
+
+  22 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
+  portaudio-18.1.ebuild, portaudio-18.1-r2.ebuild:
+  Slotting
 
 *portaudio-18.1-r2 (21 Jul 2005)
 
