--- a/net-mail/fetchmail/ChangeLog
+++ b/net-mail/fetchmail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/fetchmail
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.62 2005/07/22 08:51:03 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.63 2005/07/22 08:54:55 ticho Exp $
+
+  22 Jul 2005; Andrej Kacian <ticho@gentoo.org> fetchmail-6.2.5.2.ebuild:
+  Stable on x86.
 
 *fetchmail-6.2.5.2 (22 Jul 2005)
 
