--- a/app-admin/durep/ChangeLog
+++ b/app-admin/durep/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/durep
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/durep/ChangeLog,v 1.2 2005/04/19 22:21:26 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/durep/ChangeLog,v 1.3 2005/07/22 09:02:04 dholm Exp $
+
+  22 Jul 2005; David Holm <dholm@gentoo.org> durep-0.9-r1.ebuild:
+  Added to ~ppc.
 
 *durep-0.9-r1 (19 Apr 2005)
 
