--- a/app-antivirus/klamav/ChangeLog
+++ b/app-antivirus/klamav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-antivirus/klamav
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-antivirus/cvs-repo/gentoo-x86/app-antivirus/klamav/Attic/ChangeLog,v 1.5 2005/05/13 10:05:13 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-antivirus/cvs-repo/gentoo-x86/app-antivirus/klamav/Attic/ChangeLog,v 1.6 2005/07/22 10:00:58 dholm Exp $
+
+  22 Jul 2005; David Holm <dholm@gentoo.org> klamav-0.17.3.ebuild:
+  Added to ~ppc.
 
 *klamav-0.17.3 (13 May 2005)
 
