--- a/media-gfx/cfe/ChangeLog
+++ b/media-gfx/cfe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/cfe
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/cfe/ChangeLog,v 1.1 2005/05/03 12:20:53 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/cfe/ChangeLog,v 1.2 2005/07/22 18:13:42 dholm Exp $
+
+  22 Jul 2005; David Holm <dholm@gentoo.org> cfe-0.12.ebuild:
+  Added to ~ppc.
 
 *cfe-0.12 (03 May 2005)
 
