--- a/media-gfx/fbv/ChangeLog
+++ b/media-gfx/fbv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/fbv
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fbv/ChangeLog,v 1.11 2005/07/21 15:10:55 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fbv/ChangeLog,v 1.12 2005/07/22 18:26:43 dholm Exp $
+
+  22 Jul 2005; David Holm <dholm@gentoo.org> fbv-1.0b.ebuild:
+  Added to ~ppc.
 
   21 Jul 2005; Markus Rothe <corsair@gentoo.org> fbv-1.0b.ebuild:
   Stable on ppc64
