--- a/media-gfx/gif2png/ChangeLog
+++ b/media-gfx/gif2png/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gif2png
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gif2png/ChangeLog,v 1.11 2005/06/03 16:17:01 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gif2png/ChangeLog,v 1.12 2005/07/22 20:28:33 gongloo Exp $
+
+  22 Jul 2005; <gongloo@gentoo.org> gif2png-2.4.7.ebuild,
+  gif2png-2.5.1.ebuild:
+  Keyworded ~ppc-macos.
 
   03 Jun 2005; Luca Barbato <lu_zero@gentoo.org> metadata.xml:
   Metadata fix
