--- a/media-gfx/imgseek/ChangeLog
+++ b/media-gfx/imgseek/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/imgseek
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imgseek/Attic/ChangeLog,v 1.9 2005/04/21 16:05:24 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/imgseek/Attic/ChangeLog,v 1.10 2005/07/22 20:47:45 dholm Exp $
+
+  22 Jul 2005; David Holm <dholm@gentoo.org> imgseek-0.8.5.ebuild:
+  Added to ~ppc.
 
 *imgseek-0.8.5 (21 Apr 2005)
 
