--- a/x11-misc/synaptics/ChangeLog
+++ b/x11-misc/synaptics/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/synaptics
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/synaptics/Attic/ChangeLog,v 1.41 2005/07/22 22:44:45 battousai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/synaptics/Attic/ChangeLog,v 1.42 2005/07/22 23:23:12 battousai Exp $
+
+  22 Jul 2005; Bryan Stine <battousai@gentoo.org> synaptics-0.14.1.ebuild,
+  synaptics-0.14.2.ebuild, synaptics-0.14.3.ebuild:
+  Multilib: /usr/lib -> /usr/$(get_libdir).
 
   22 Jul 2005; Bryan Stine <battousai@gentoo.org> synaptics-0.14.1.ebuild,
   synaptics-0.14.2.ebuild, synaptics-0.14.3.ebuild:
