--- a/app-editors/vim/ChangeLog
+++ b/app-editors/vim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim/ChangeLog,v 1.180 2005/07/23 13:58:03 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim/ChangeLog,v 1.181 2005/07/23 22:02:42 hardave Exp $
+
+  23 Jul 2005; Hardave Riar <hardave@gentoo.org> vim-6.3.084.ebuild:
+  Stable on mips, bug #99578.
 
   23 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> vim-6.3.084.ebuild:
   Stable on ia64, bug 99578.
