--- a/app-accessibility/epos/ChangeLog
+++ b/app-accessibility/epos/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/epos
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/epos/ChangeLog,v 1.11 2005/07/23 20:11:12 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/epos/ChangeLog,v 1.12 2005/07/24 00:59:39 eradicator Exp $
+
+  24 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
+  epos-2.5.35-r1.ebuild:
+  Added addpredict to start of src_compile since some people are hitting
+  access violations. See bug #10053.
 
   23 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org>
   epos-2.5.35-r1.ebuild:
