--- a/sys-block/unieject/ChangeLog
+++ b/sys-block/unieject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/unieject
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.2 2005/07/24 00:33:58 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.3 2005/07/24 07:42:51 corsair Exp $
+
+  24 Jul 2005; Markus Rothe <corsair@gentoo.org> unieject-2.1.ebuild:
+  added ~ppc64
 
 *unieject-2.1 (24 Jul 2005)
 
