--- a/sys-block/unieject/ChangeLog
+++ b/sys-block/unieject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/unieject
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.3 2005/07/24 07:42:51 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-block/cvs-repo/gentoo-x86/sys-block/unieject/Attic/ChangeLog,v 1.4 2005/07/24 08:27:31 port001 Exp $
+
+  24 Jul 2005; Ian Leitch <port001@gentoo.org> unieject-2.1.ebuild:
+  Marked ~x86
 
   24 Jul 2005; Markus Rothe <corsair@gentoo.org> unieject-2.1.ebuild:
   added ~ppc64
