--- a/media-libs/pablio/ChangeLog
+++ b/media-libs/pablio/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/pablio
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pablio/Attic/ChangeLog,v 1.2 2005/07/22 14:38:06 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pablio/Attic/ChangeLog,v 1.3 2005/07/24 17:30:47 dholm Exp $
+
+  24 Jul 2005; David Holm <dholm@gentoo.org> pablio-18.1.ebuild:
+  Added to ~ppc.
 
   22 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> pablio-18.1.ebuild:
   don't put use-expanded use flags in IUSE
