--- a/media-sound/extace/ChangeLog
+++ b/media-sound/extace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/extace
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/extace/Attic/ChangeLog,v 1.10 2005/05/14 12:02:04 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/extace/Attic/ChangeLog,v 1.11 2005/07/25 12:33:42 dholm Exp $
+
+  25 Jul 2005; David Holm <dholm@gentoo.org> extace-1.9.2.ebuild:
+  Added to ~ppc.
 
   14 May 2005; Jan Brinkmann <luckyduck@gentoo.org> extace-1.8.11.ebuild,
   extace-1.9.2.ebuild:
