--- a/media-sound/jmax/ChangeLog
+++ b/media-sound/jmax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/jmax
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jmax/Attic/ChangeLog,v 1.11 2005/03/17 21:55:55 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/jmax/Attic/ChangeLog,v 1.12 2005/07/25 12:40:14 dholm Exp $
+
+  25 Jul 2005; David Holm <dholm@gentoo.org> jmax-4.1.0.ebuild:
+  Added to ~ppc.
 
   17 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> metadata.xml,
   jmax-4.1.0.ebuild:
