--- a/media-sound/mup/ChangeLog
+++ b/media-sound/mup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mup
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mup/ChangeLog,v 1.13 2005/05/15 14:44:18 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mup/ChangeLog,v 1.14 2005/07/25 13:51:38 dholm Exp $
+
+  25 Jul 2005; David Holm <dholm@gentoo.org> mup-5.0.ebuild:
+  Added to ~ppc.
 
   15 May 2005; Diego Pettenò <flameeyes@gentoo.org> mup-4.6.ebuild,
   mup-5.0.ebuild:
