--- a/media-sound/tapiir/ChangeLog
+++ b/media-sound/tapiir/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/tapiir
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/tapiir/ChangeLog,v 1.14 2005/04/19 08:15:35 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/tapiir/ChangeLog,v 1.15 2005/07/25 19:13:59 dholm Exp $
+
+  25 Jul 2005; David Holm <dholm@gentoo.org> tapiir-0.7.1.ebuild:
+  Added to ~ppc.
 
   19 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove retired developer from metadata.xml.
