--- a/app-i18n/koffice-i18n/ChangeLog
+++ b/app-i18n/koffice-i18n/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/koffice-i18n
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/koffice-i18n/Attic/ChangeLog,v 1.48 2005/06/21 08:43:02 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/koffice-i18n/Attic/ChangeLog,v 1.49 2005/07/25 20:29:47 greg_g Exp $
+
+*koffice-i18n-1.4.1 (25 Jul 2005)
+
+  25 Jul 2005; Gregorio Guidi <greg_g@gentoo.org>
+  +koffice-i18n-1.4.1.ebuild:
+  New version.
 
 *koffice-i18n-1.4.0 (21 Jun 2005)
 
