--- a/media-libs/libpano12/ChangeLog
+++ b/media-libs/libpano12/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libpano12
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpano12/Attic/ChangeLog,v 1.4 2005/04/20 16:41:41 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpano12/Attic/ChangeLog,v 1.5 2005/07/25 20:35:50 lu_zero Exp $
+
+*libpano12-2.7.0.10 (25 Jul 2005)
+
+  25 Jul 2005; Luca Barbato <lu_zero@gentoo.org> metadata.xml,
+  +libpano12-2.7.0.10.ebuild:
+  New version
 
 *libpano12-2.7.0.9 (20 Apr 2005)
 
