--- a/media-fonts/mathematica-fonts/ChangeLog
+++ b/media-fonts/mathematica-fonts/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/mathematica-fonts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/mathematica-fonts/ChangeLog,v 1.2 2005/05/21 21:10:12 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/mathematica-fonts/ChangeLog,v 1.3 2005/07/26 08:50:47 flameeyes Exp $
+
+  26 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
+  mathematica-fonts-4.2.ebuild:
+  Added to ~amd64.
 
   21 May 2005; Mamoru KOMACHI <usata@gentoo.org>
   mathematica-fonts-4.2.ebuild:
