--- a/media-gfx/kpl/ChangeLog
+++ b/media-gfx/kpl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/kpl
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/kpl/Attic/ChangeLog,v 1.1 2005/04/19 00:44:59 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/kpl/Attic/ChangeLog,v 1.2 2005/07/26 23:10:42 cryos Exp $
+
+  26 Jul 2005; Marcus D. Hanwell <marcus@gentoo.org> kpl-3.2.ebuild:
+  Stable on amd64 and x86.
 
 *kpl-3.2 (19 Apr 2005)
 
