--- a/x11-wm/icewm/ChangeLog
+++ b/x11-wm/icewm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/icewm
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/icewm/ChangeLog,v 1.97 2005/06/04 06:29:27 morfic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/icewm/ChangeLog,v 1.98 2005/07/27 02:12:04 morfic Exp $
+
+*icewm-1.2.22 (27 Jul 2005)
+
+  27 Jul 2005; Daniel Goller <morfic@gentoo.org> +files/icewm-1.2.22.ybutton.cc.patch,
+  icewm-1.2.21.ebuild, +icewm-1.2.22.ebuild:
+  Adding 1.2.22 and 1.2.21 goes stable
 
 *icewm-1.2.21 (04 Jun 2005)
 
