--- a/media-libs/xine-lib/ChangeLog
+++ b/media-libs/xine-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.233 2005/07/26 22:32:29 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.234 2005/07/27 07:30:57 flameeyes Exp $
+
+  27 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> xine-lib-1.1.0.ebuild:
+  Exclude vidix patch as per bug #100434.
 
 *xine-lib-1.1.0 (26 Jul 2005)
 
