--- a/media-plugins/mythgallery/ChangeLog
+++ b/media-plugins/mythgallery/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythgallery
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythgallery/Attic/ChangeLog,v 1.30 2005/06/29 08:02:37 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythgallery/Attic/ChangeLog,v 1.31 2005/07/27 11:19:03 pvdabeel Exp $
+
+  27 Jul 2005; Pieter Van den Abeele <pvdabeel@gentoo.org>
+  mythgallery-0.18.1.ebuild:
+  Stable on PowerPC. A MythTV plugin.
 
   29 Jun 2005; Doug Goldstein <cardoe@gentoo.org>
   -mythgallery-0.17-r1.ebuild:
