--- a/media-plugins/mythnews/ChangeLog
+++ b/media-plugins/mythnews/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythnews
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythnews/Attic/ChangeLog,v 1.20 2005/06/29 08:09:06 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythnews/Attic/ChangeLog,v 1.21 2005/07/27 11:26:51 pvdabeel Exp $
+
+  27 Jul 2005; Pieter Van den Abeele <pvdabeel@gentoo.org>
+  mythnews-0.18.1.ebuild:
+  Stable on PowerPC.
 
   29 Jun 2005; Doug Goldstein <cardoe@gentoo.org> -mythnews-0.17.ebuild:
   remove old version
