--- a/media-plugins/mythphone/ChangeLog
+++ b/media-plugins/mythphone/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythphone
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythphone/Attic/ChangeLog,v 1.9 2005/06/29 08:10:15 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/mythphone/Attic/ChangeLog,v 1.10 2005/07/27 11:29:06 pvdabeel Exp $
+
+  27 Jul 2005; Pieter Van den Abeele <pvdabeel@gentoo.org>
+  mythphone-0.18.1.ebuild:
+  Stable on PowerPC
 
   29 Jun 2005; Doug Goldstein <cardoe@gentoo.org> -mythphone-0.17.ebuild:
   remove old version
