--- a/gnome-base/gail/ChangeLog
+++ b/gnome-base/gail/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gail
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gail/Attic/ChangeLog,v 1.86 2005/07/13 05:10:51 geoman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gail/Attic/ChangeLog,v 1.87 2005/07/27 17:54:16 gmsoft Exp $
+
+  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> gail-1.8.4.ebuild:
+  Stable on hppa.
 
   13 Jul 2005; Stephen P. Becker <geoman@gentoo.org> gail-1.8.4.ebuild:
   stable on mips
