--- a/gnome-base/gnome-applets/ChangeLog
+++ b/gnome-base/gnome-applets/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.118 2005/07/27 17:48:50 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.119 2005/07/27 17:53:35 gmsoft Exp $
+
+  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> gnome-applets-2.10.1.ebuild:
+  Stable on hppa.
 
   27 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   gnome-applets-2.10.1.ebuild:
