--- a/gnome-base/gnome-desktop/ChangeLog
+++ b/gnome-base/gnome-desktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.103 2005/07/27 14:26:45 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.104 2005/07/27 18:08:45 gmsoft Exp $
+
+  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> gnome-desktop-2.10.1.ebuild:
+  Stable on hppa.
 
   27 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   gnome-desktop-2.10.1.ebuild:
