--- a/gnome-base/libgnomeprint/ChangeLog
+++ b/gnome-base/libgnomeprint/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnomeprint
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprint/ChangeLog,v 1.95 2005/07/26 15:10:00 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprint/ChangeLog,v 1.96 2005/07/27 18:04:14 gmsoft Exp $
+
+  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> libgnomeprint-2.10.3.ebuild:
+  Stable on hppa.
 
   26 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   libgnomeprint-2.10.3.ebuild:
