--- a/gnome-base/libgnomeprintui/ChangeLog
+++ b/gnome-base/libgnomeprintui/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnomeprintui
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprintui/ChangeLog,v 1.91 2005/07/26 15:11:37 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomeprintui/ChangeLog,v 1.92 2005/07/27 18:05:03 gmsoft Exp $
+
+  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> libgnomeprintui-2.10.2.ebuild:
+  Stable on hppa.
 
   26 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
   libgnomeprintui-2.10.2.ebuild:
